syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Server.ChatApp.Protos.Users";
package UserCommandsPkg;

service OnlineUserCommandsRPCs{
	rpc CreateOrUpdate(Shared.Empty) returns(OnlineUserResultMsg);
	rpc Remove(Shared.Empty) returns(OnlineUserResultMsg);
}

message OnlineUserResultMsg{
    bool IsSuccessful = 1;
	repeated Shared.MessageInfo Messages = 2;
	string UserId = 3;
}